<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    tools:context="jolliffe.a415.csc.groupproject.MainActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoTable"
        android:layout_below="@+id/workoutSpin">
        <TableRow android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <!-- # of Reps -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps_label"
                android:id="@+id/repsLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/DownButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:id="@+id/repsTextView"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/decrease"
                android:id="@+id/DownButton"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/repsTextView"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/increase"
                android:id="@+id/UpButton"
                android:textSize="20sp"
                android:layout_alignTop="@+id/DownButton"
                android:layout_toEndOf="@+id/DownButton"/>

        </TableRow>

        <TableRow android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <!-- Amount of Weight -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets_label"
                android:id="@+id/setsLabel"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:id="@+id/setsTextView"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/decrease"
                android:id="@+id/SetsDownButton"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/increase"
                android:id="@+id/SetsUpButton"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>

    <Spinner
        android:id="@+id/workoutSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:entries="@array/workout_array"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoTable"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/submit"
            android:id="@+id/SubmitButton"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
